added font styles

--- a/pickmi/src/App.css
+++ b/pickmi/src/App.css
@@ -31,3 +31,11 @@
     transform: rotate(360deg);
   }
 }
+
+.font-link {
+  font-family: 'Berkshire Swash';
+}
+
+.font-link2 {
+  font-family: 'Open Sans', sans-serif;
+}
